--- a/CurrentWeatherData/MainWindow.xaml
+++ b/CurrentWeatherData/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Button Content="Button" Command="{Binding cmd}" HorizontalAlignment="Left" Margin="310,194,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
